import and use Shoelace

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html encoding="utf8">
   <head>
     <title>Testing ww-machinelearningvisualizer</title>
+    <link rel="stylesheet" href="./node_modules/@shoelace-style/shoelace/dist/themes/light.css" />
+    <script type="module" src="./node_modules/@shoelace-style/shoelace/dist/shoelace.js"></script>
     <script src="index.ts" type="module"></script>
   </head>
   <body>
