--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,14 @@
     <title>Testing ww-machinelearningvisualizer</title>
     <script src="main.ts" type="module"></script>
     <script src="index.ts" type="module"></script>
+    <style>
+    .sl-toast-stack {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: auto;
+    }
+    </style>
   </head>
   <body>
     <ww-machinelearningvisualizer></ww-machinelearningvisualizer>
