--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,9 @@
     <script src="main.ts" type="module"></script>
     <script src="index.ts" type="module"></script>
     <style>
+    html, body {
+      margin: 0;
+    }
     .sl-toast-stack {
       position: absolute;
       top: 0;
