--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
     html, body {
       margin: 0;
     }
+    * {
+      margin: 0;
+      padding: 0;
+    }
     .sl-toast-stack {
       position: absolute;
       top: 0;
