--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <title>Testing ww-machinelearningvisualizer</title>
     <script src="main.ts" type="module"></script>
     <script src="index.ts" type="module"></script>
+    <script src="shortcut_listener.ts" type="module"></script>
     <style>
     html, body {
       margin: 0;
