new about section, new keyboard shortcuts, display keyboard shortcuts in panel, move to CSV data, support for light and dark theme, bug fixes

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <ww-deeplearning></ww-deeplearning>
+    <ww-deep-learning></ww-deep-learning>
     <form
       autocomplete="off"
       style="position: fixed; top: 0; left: 0; padding: 10px"
@@ -21,7 +21,7 @@
       <input
         type="checkbox"
         id="editableInput"
-        onchange="document.querySelector('ww-deeplearning').toggleAttribute('editable')"
+        onchange="document.querySelector('ww-deep-learning').toggleAttribute('editable')"
       />
       <label for="editableInput">editable</label>
     </form>
